@@ -73,6 +73,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - COBOL                  Benny Baumann
 - ColdFusion             Diego
 - D                      Thomas Kuehne
+- DCS                    Stelio Passaris
 - Delphi                 Járja Norbert, Benny Baumann
 - Div                    Gabriel Lorenzo
 - DOS                    Alessandro Staltari
